# argus-ai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: LAUNCH_PLAYBOOK.md  grafana-dashboard.json  linkedin-launch-edition4.md
examples/: agentic_eval.py  fastapi_middleware.py  monitoring.py  quickstart.py
src/argus_ai/: __init__.py  types.py
src/argus_ai/exporters/: __init__.py  otel.py  prometheus.py
src/argus_ai/integrations/: __init__.py  anthropic.py  openai.py
src/argus_ai/monitoring/: __init__.py  alerts.py  thresholds.py
src/argus_ai/scoring/: __init__.py  agentic.py  garvis.py  metrics.py
src/argus_ai/sdk/: __init__.py  client.py  decorators.py
tests/unit/: test_agentic.py  test_client.py  test_garvis.py  test_metrics.py  test_monitoring.py
